# READ-PDF-API

./: .gitignore  README.md  pyproject.toml
app/: server.py
app/BAL/: Forms.py  KnowledgeJSON.py  KnowledgePDF.py  UserClientPDF.py
app/Entities/: Client.py  Demographic.py  User.py
app/Utility/: VectorDBUtil.py
galaxbiotech-vectorDB/: index.faiss  index.pkl
